--- a/index.html
+++ b/index.html
@@ -407,6 +407,27 @@
 				<button type="button" class="btn-modal" data-modal-close>
 					<svg class="modal-icon" width="18" height="18"><use href="./images/sprite.svg#icon-close"></use></svg>
 				</button>
+				
+				<form class="modal-field" action="#">
+					<p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+					<label for="name">Ім'я
+						<input type="text" name="name" id="name" placeholder="">
+					</label>
+					<label for="tel">Телефон
+						<input type="tel" name="tel" id="tel" placeholder="">
+					</label>
+					<label for="email">Пошта
+						<input type="email" name="email" id="email" placeholder="" >
+					</label>
+					<label for="comment">Коментар
+						<textarea name="comment" id="comment" placeholder="Введіть текст"></textarea>
+					</label>
+					<div class="modal-checkbox">
+					<label for="acsept">
+						<input type="checkbox" id="acsept">Погоджуюся з розсилкою та приймаю<a href="">Умови договору</a>
+					</label>	</div>								
+					<button class="modal-submit" type="submit">Відправити</button>
+				</form>
 			</div>
 		</div>
 		<script src="./js/modal.js"></script>
