--- a/index.html
+++ b/index.html
@@ -400,6 +400,19 @@
 						</li>
 					</ul>
 				</div>
+				<div class="subscription">
+					<form class="subscription-field">
+						<p class="subscription-title">Підпишіться на розсилку</p>
+						<div>
+						<label name="E-mail">
+							<input class="subscription-input" type="email" name="email" placeholder="E-mail">
+						</label>
+<button class="subscription-submit" type="submit">Підписатися
+	<svg class="subscription-icon" width="24" height="24">
+									<use href="./images/sprite.svg#icon-send"></use>
+</button></div>
+					</form>
+				</div>
 			</div>
 		</footer>
 		<div class="backdrop is-hidden" data-modal>
@@ -407,25 +420,48 @@
 				<button type="button" class="btn-modal" data-modal-close>
 					<svg class="modal-icon" width="18" height="18"><use href="./images/sprite.svg#icon-close"></use></svg>
 				</button>
-				
-				<form class="modal-field" action="#">
+
+				<form class="modal-field" >
 					<p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
-					<label for="name">Ім'я
-						<input type="text" name="name" id="name" placeholder="">
-					</label>
-					<label for="tel">Телефон
-						<input type="tel" name="tel" id="tel" placeholder="">
-					</label>
-					<label for="email">Пошта
-						<input type="email" name="email" id="email" placeholder="" >
-					</label>
-					<label for="comment">Коментар
+					<div class="form-field">
+						<label for="name">Ім'я</label>
+						<input type="text" name="name" id="name" />
+						<svg class="form-icon" width="18" height="18">
+							<use href="./images/sprite.svg#icon-person"></use>
+						</svg>
+					</div>
+
+					<div class="form-field">
+						<label for="tel">Телефон</label>
+						<input type="tel" name="tel" id="tel" />
+						<svg class="form-icon" width="18" height="18">
+							<use href="./images/sprite.svg#icon-phone"></use>
+						</svg>
+					</div>
+
+					<div class="form-field">
+						<label for="email">Пошта</label>
+						<input type="email" name="email" id="email" />
+						<svg class="form-icon" width="18" height="18">
+							<use href="./images/sprite.svg#icon-email"></use>
+						</svg>
+					</div>
+
+					<div class="form-field">
+						<label for="comment">Коментар</label>
 						<textarea name="comment" id="comment" placeholder="Введіть текст"></textarea>
-					</label>
+					</div>
+
 					<div class="modal-checkbox">
-					<label for="acsept">
-						<input type="checkbox" id="acsept">Погоджуюся з розсилкою та приймаю<a href="">Умови договору</a>
-					</label>	</div>								
+						
+						<input class="checkbox" type="checkbox" id="acsept" />
+						<span class="check-box">
+							<svg class="check-icon" width="16" height="15">
+							<use href="./images/sprite.svg#icon-checked"></use>
+						</svg>
+						</span>
+						<label for="acsept">Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a></label>
+						</div>
 					<button class="modal-submit" type="submit">Відправити</button>
 				</form>
 			</div>
