--- a/index.html
+++ b/index.html
@@ -403,14 +403,15 @@
 				<div class="subscription">
 					<form class="subscription-field">
 						<p class="subscription-title">Підпишіться на розсилку</p>
-						<div>
+						<div class="subscription-wrap">
 						<label name="E-mail">
 							<input class="subscription-input" type="email" name="email" placeholder="E-mail">
 						</label>
-<button class="subscription-submit" type="submit">Підписатися
-	<svg class="subscription-icon" width="24" height="24">
+						<button class="subscription-submit" type="submit">Підписатися
+							<svg class="subscription-icon" width="24" height="24">
 									<use href="./images/sprite.svg#icon-send"></use>
-</button></div>
+								</button>
+							</div>
 					</form>
 				</div>
 			</div>
