--- a/portfolio.html
+++ b/portfolio.html
@@ -311,6 +311,20 @@
 						</li>
 					</ul>
 				</div>
+				<div class="subscription">
+					<form class="subscription-field">
+						<p class="subscription-title">Підпишіться на розсилку</p>
+						<div class="subscription-wrap">
+						<label name="E-mail">
+							<input class="subscription-input" type="email" name="email" placeholder="E-mail">
+						</label>
+						<button class="subscription-submit" type="submit">Підписатися
+							<svg class="subscription-icon" width="24" height="24">
+									<use href="./images/sprite.svg#icon-send"></use>
+								</button>
+							</div>
+					</form>
+				</div>
 			</div>
 		</footer>
 	</body>
