--- a/portfolio.html
+++ b/portfolio.html
@@ -315,7 +315,7 @@
 					<form class="subscription-field">
 						<p class="subscription-title">Підпишіться на розсилку</p>
 						<div class="subscription-wrap">
-						<label name="E-mail">
+						<label>
 							<input class="subscription-input" type="email" name="email" placeholder="E-mail">
 						</label>
 						<button class="subscription-submit" type="submit">Підписатися
