--- a/index.html
+++ b/index.html
@@ -407,10 +407,8 @@
 						<label name="E-mail">
 							<input class="subscription-input" type="email" name="email" placeholder="E-mail">
 						</label>
-						<button class="subscription-submit" type="submit">Підписатися
-							<svg class="subscription-icon" width="24" height="24">
-									<use href="./images/sprite.svg#icon-send"></use>
-								</button>
+						<button class="subscription-submit" type="submit"> Підписатися<span><svg class="subscription-icon" width="24" height="24"></svg>
+									<use href="./images/sprite.svg#icon-send"></use></span></button>
 							</div>
 					</form>
 				</div>
