--- a/index.html
+++ b/index.html
@@ -404,12 +404,17 @@
 					<form class="subscription-field">
 						<p class="subscription-title">Підпишіться на розсилку</p>
 						<div class="subscription-wrap">
-						<label name="E-mail">
-							<input class="subscription-input" type="email" name="email" placeholder="E-mail">
-						</label>
-						<button class="subscription-submit" type="submit"> Підписатися<span><svg class="subscription-icon" width="24" height="24"></svg>
-									<use href="./images/sprite.svg#icon-send"></use></span></button>
-							</div>
+							<label>
+								<input class="subscription-input" type="email" name="email" placeholder="E-mail" />
+							</label>
+							<button class="subscription-submit" type="submit">
+								Підписатися
+								<span>
+									<svg class="subscription-icon" width="24" height="24"></svg>
+									<use href="./images/sprite.svg#icon-send"></use>
+								</span>
+							</button>
+						</div>
 					</form>
 				</div>
 			</div>
@@ -420,7 +425,7 @@
 					<svg class="modal-icon" width="18" height="18"><use href="./images/sprite.svg#icon-close"></use></svg>
 				</button>
 
-				<form class="modal-field" >
+				<form class="modal-field">
 					<p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
 					<div class="form-field">
 						<label for="name">Ім'я</label>
@@ -452,15 +457,17 @@
 					</div>
 
 					<div class="modal-checkbox">
-						
 						<input class="checkbox" type="checkbox" id="acsept" />
 						<span class="check-box">
 							<svg class="check-icon" width="16" height="15">
-							<use href="./images/sprite.svg#icon-checked"></use>
-						</svg>
+								<use href="./images/sprite.svg#icon-checked"></use>
+							</svg>
 						</span>
-						<label for="acsept">Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a></label>
-						</div>
+						<label for="acsept">
+							Погоджуюся з розсилкою та приймаю
+							<a href="">Умови договору</a>
+						</label>
+					</div>
 					<button class="modal-submit" type="submit">Відправити</button>
 				</form>
 			</div>
