--- a/portfolio.html
+++ b/portfolio.html
@@ -320,7 +320,7 @@
 						</label>
 						<button class="subscription-submit" type="submit">Підписатися
 							<svg class="subscription-icon" width="24" height="24">
-									<use href="./images/sprite.svg#icon-send"></use>
+									<use href="./images/sprite.svg#icon-send"></use></svg>
 								</button>
 							</div>
 					</form>
