--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
 							</label>
 							<button class="subscription-submit" type="submit">
 								Підписатися
-								<svg class="subscription-icon" width="24" height="24"></svg>
-								<use href="./images/sprite.svg#icon-send"></use>								
+								<svg class="subscription-icon" width="24" height="24">
+								<use href="./images/sprite.svg#icon-send"></use></svg>								
 							</button>
 						</div>
 					</form>
