--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
 							<label>
 								<input class="subscription-input" type="email" name="email" placeholder="E-mail" />
 							</label>
-							<button class="subscription-submit" type="submit">
-								Підписатися
+							<button class="subscription-submit" type="submit">Підписатися
 								<svg class="subscription-icon" width="24" height="24">
-								<use href="./images/sprite.svg#icon-send"></use></svg>								
+								<use href="./images/sprite.svg#icon-send"></use>
+							    </svg>								
 							</button>
 						</div>
 					</form>
